1.1.0
   - bug [10248] "this.lang giver RuntimeException null"
   - bug [11108] "Der skal laves en funktion til validering af at en funktion findes i et javascript."
   - bug [11076] "Samling af valideringsfunktionalitet for plugins"
   - bug [11104] "NaiveJavaScriptWrapper ser ikke ud til at blive brugt længere"
   - bug [10507] "PluginClassLoader virker overflødig"
   - bug [10570] "testbug"
   - bug [11056] "fjern @Ignore fra FlowMapCreatorTest.createMapTest()"
   - bug [11051] "Der skal laves en type include-funktionalitet til brug i javascripts."
   - bug [10900] "Mystisk test case i CargoContainerTest"
   - bug [11055] "option: "bench" virker ikke mere."
   - bug [10179] "Der skal laves en første version af Simple/GenericRelationPlugin"
   - bug [10937] "IndexeerXSEM og NormalizeDocument bruger PTIJobsMap"
   - bug [11042] "Bruger vi PluginID til noget?"
   - bug [11053] "properties/konfigurationsværdier der læses fra DatadockMain skal checkes"
   - bug [11036] "Bliver ESHarvesterCleanup brugt længere?"
   - bug [10906] "warning fra setPIDInTaskpackageRecordStructure i ESHarvest"
   - bug [10939] "alle plugins skal have et pluginenvironment"
   - bug [11010] "Verificer at ImmutablePair lever op til sit navn"
   - bug [11029] "ForceFedoraPid plugin skal stå før XMLDCHarvester i workflows.xml"
   - bug [11009] "InputPair skal skifte navn til ImmutablePair"
   - bug [10984] "OwnerRelation plugin'et skal fjernes."
   - bug [10983] "RUBHarvester plugin'et skal fjernes"
   - bug [10938] "FlowMapCreator skal oprette en liste af instanser af IPluggable"
   - bug [10946] "Fjern XMLHarvester fra koden."
   - bug [10913] "Datadockmanager bruger DatadockJobsMap til verificering"
   - bug [10945] "Få alias argumentet væk fra workflows.xml"
   - bug [10912] "Alle spor af indexingAlias skal væk"
   - bug [10911] "Indfør indexingAlias i PTI_jobs_xml og lad det plugin der skal bruge det hente det frem"
   - bug [10809] "IndexingAlias skal ud af CargoContainerens add metode"