@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10172] "Der mangler metode i DatadockJob til at hente language og mimetype"
    - bug [10248] "this.lang giver RuntimeException null"
    - bug [11108] "Der skal laves en funktion til validering af at en funktion findes i et javascript."
    - bug [11076] "Samling af valideringsfunktionalitet for plugins"
